Implement entity, repository and service layer

--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,20 @@
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <!-- Swagger for Spring Boot -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.5.0</version> <!-- Latest stable version at the time -->
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.30</version> <!-- Latest stable version -->
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
